fix: adjust column gap in cover section for improved layout consistency

--- a/src/components/pages/home/sections/cover.section.scss
+++ b/src/components/pages/home/sections/cover.section.scss
@@ -58,7 +58,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    column-gap: 24px;
+    column-gap: 20px;
     row-gap: 8px;
 
     font-size: 100px;
